# neodym-lead-discovery-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: extracted-specification.md
docs/plans/: 2026-06-22-lead-discovery-agent.md
src/neodym_lead_discovery/: __init__.py  cli.py  models.py  storage.py  ui.py  website_context.py  website_reader.py
src/neodym_lead_discovery/discovery/: __init__.py  apollo_api.py  base.py  csv_importer.py  dedupe.py
src/neodym_lead_discovery/enrichment/: __init__.py  contacts.py  jobs.py  website.py
src/neodym_lead_discovery_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_apollo_api.py  test_cli.py  test_cli_apollo.py  test_cli_enrich.py  test_contacts.py  test_csv_importer.py  test_dedupe.py  test_enrichment_removed.py  test_enrichment_storage.py  test_jobs_enrichment.py  test_models.py  test_page_evidence_analysis.py  test_storage.py  test_ui_dashboard.py  test_website_context.py  test_website_crawler.py  test_website_enrichment.py  test_website_reader.py
tests/fixtures/: sample_companies.csv
